--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
-v 0.0.3
+v 1
     - added Star Rating
 
-changelog for earlier versions does not exist :(
+v 0.0.2
+v 0.0.1
+    - changelog-notes for these versions do not exist :(
