Added main / most used bpm. Closes #3
Im like 99.99% certain this is correct, if not, we'll see. It should at least be good enough for the time being. In all my random picks I haven't seen a single one being incorrect.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 v 1.0.1
+    - Added main / most used bpm
     - StarRating.forMods(long) now filters out mods that not affect star-rating
 
 v 1.0.0
