--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
-v 1.0.2
+v 1.1.0
+    - added RankedStatus enum
+        * which could be null, in that case rankedStatusRaw can be used.
+        * is null in case a Enum-Constant does not exist for the corresponding int value, aka I didn't know about that value
+    - changed field 'ranked' to 'rankedStatusRaw'
     - changed 'gameMode' and 'grade' in OsuBeatmapInfo to use a enum instead of int
 
 v 1.0.1
